Ticket #1592 (closed defect: fixed)

Opened 5 months ago

Last modified 3 months ago

--ts-extra-pmt is broken again

Reported by: md Assigned to:
Priority: normal Milestone: 0.9.0 bugs
Component: Demuxers Version: master
Severity: normal Keywords:
Cc: md Platform(s): all
Difficulty: unknown Work status: Not started

Description

An attempt to use --ts-extra-pmt results in erratical behaviour of VLC:

1) audio doesn't play at all

2) log is full of:

[00000340] ts demuxer debug: DEMUX_SET_GROUP 0 (nil)

[00000328] main input debug: waiting decoder fifos to empty
[00000328] main input debug: waiting decoder fifos to empty
[00000328] main input debug: waiting decoder fifos to empty
...

Ticket #516 was referring to the same problem in the past, but the changeset which fixed it is not available from trac.

It would be useful to modify this option for situations, where only PAT is missing but PMT is present and correct. This is the case with e.g. Topfield DVB-S2 receivers. Specifying all PIDs by hand is unnecessary in such case - VLC only needs to be made aware which one is the PMT PID.

Change History

24/05/08 18:06:17 changed by funman

  • owner deleted.

28/06/08 14:19:12 changed by courmisch

  • milestone set to Bugs paradize.

04/07/08 22:54:49 changed by fenrir

  • status changed from new to closed.
  • resolution set to fixed.

I have fixed it in [d0dd8179b650055dcdf4b095c5690427a767fa2e]

I have also improved it a bit. The syntax is now

pmt_pid[:pmt_number][=pid_description[,pid_description]]

where pid_description could take 3 forms:

  1. pid:pcr (to force the pcr pid)
  2. pid:stream_type
  3. pid:type=fourcc where type=(video|audio|spu)

pid_description is optionnal in case the PMT exists in the stream (as you proposed).

Unlike previous behaviour, if you specify and extra pmt, the parsing of the PAT will be disabled.

04/07/08 23:00:34 changed by courmisch

  • version changed from 0.8.6 (bugfix) to master.
  • milestone changed from Bugs paradize to 0.9.0 bugs.