Fixed and improved ts-extra-pmt option (close #1592). If you specify and extra pmt, the parsing of the PAT will be disabled (unlike previous behaviour). You can now just specify the pid and number of your program and it will automatically be used. You can specify es by type (video, audio, spu) and fourcc instead of stream type. You can specify the pcr pid.